objects/vlocity_ins__CachedPriceBookEntryAttributeValue__c.object
<CustomObject>
    <description>System object used as a persistent cache of attribute values applicable to the products behind specified price book entries.</description>
    <fields>
        <fullName>vlocity_ins__AttributeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Attribute</label>
        <referenceTo>vlocity_ins__Attribute__c</referenceTo>
        <relationshipName>AttributesOfProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumericValue__c</fullName>
        <label>Numeric Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Pricebook2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Pricebook2Id</relationshipLabel>
        <relationshipName>Pricebook2Id</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricebookEntryId__c</fullName>
        <label>PricebookEntryId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cached PriceBookEntry Attribute Value</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductAttributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>